# mines-sweeper

./: .editorconfig  .gitignore  CMakeLists.txt  Readme.md
commands/: build.sh
src/: main.cpp
src/core/: assets_manager.cpp  engine.cpp  router.cpp
src/game/: base_cell.cpp  cell.cpp  cells_field.cpp  empty_cell.cpp  game.cpp  mine.cpp
src/include/: assets_manager.hpp  cell.hpp  engine.hpp  game.hpp  game_route.hpp  menu_route.hpp  mine.hpp  route.hpp  settings_route.hpp
src/include/core/: router.hpp
src/include/game/: base_cell.hpp  bomb.hpp  cell.hpp  cells_field.hpp  empty_cell.hpp  game.hpp
src/include/routes/: game_route.hpp  menu_route.hpp  route.hpp
src/routes/: game_route.cpp  menu_route.cpp  settings_route.cpp
